--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,35 @@ body {
   border-color: 2px solid rgb(154, 95, 0);
   color: rgb(54, 54, 54);
   font-weight: bolder;
-  background: linear-gradient(90deg, rgba(180, 121, 58, 0.9892331933) 0%, rgb(230, 226, 102) 50%, rgb(236, 140, 4) 100%);
+  background: linear-gradient(90deg, rgba(180, 121, 58, 0.1) 0%, rgb(230, 226, 102) 50%, rgb(236, 140, 4) 100%);
   width: 100%;
   text-align: center;
+}
+
+.modal-content {
+  color: rgb(255, 255, 255);
+  background: #3e3c3c;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 10px;
+  width: fit-content;
+}
+
+.card-body {
+  background: #3e3c3c;
+  border-radius: 10px;
+}
+
+#modal-bodyCarrito {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 10px;
+  width: fit-content;
+  background: rgb(193, 165, 126);
 }
 
 * {
